feat(app): can subscribe to an event face to face